@@ -293,6 +293,9 @@ They are generated by the following parts:
   will be changed to reflect the change. (Starting from Wesnoth 1.11.0 the flag
   can be changed after the initial generation.) What flags are set when choosing
   this option is determined by the Wesnoth developers.
+- CXX_FLAGS_PEDANTIC_COMPILATION The flags used for pedantic compilation.
+  Whether these flags are used depends on the configuration option
+  ENABLE_PEDANTIC_COMPILATION.
 - CXX_FLAGS_USER These flags set when configuring Wesnoth. The initial value of
   this variable depends on the CXXFLAGS in the environment or defined by
   -DCXX_FLAGS_USER. These flags are stored and can be changed later by running
