@@ -350,6 +350,7 @@ Version 1.11.0-svn:
    * Fixed bug #19795: OOS when [message][option] is used in a (single-player)
      start event when side 1's controller is null.
    * Changed: Enabled strict compilation for Clang in CMake.
+   * Added: ENABLE_PEDANTIC_COMPILATION option for CMake.
 
 Version 1.10.0:
  * Campaigns:
